--- a/EscapeApp/app/src/main/res/drawable-hdpi/rectangle.xml
+++ b/EscapeApp/app/src/main/res/drawable-hdpi/rectangle.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
-<solid
-    android:color="#ffffff" />
-<padding android:left="7dp"
-    android:top="7dp"
-    android:right="7dp"
-    android:bottom="7dp" />
-</shape>
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:shape="rectangle">-->
+<!--<solid-->
+    <!--android:color="#ffffff" />-->
+<!--<padding android:left="7dp"-->
+    <!--android:top="7dp"-->
+    <!--android:right="7dp"-->
+    <!--android:bottom="7dp" />-->
+<!--</shape>-->
+
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item>
+        <shape>
+            ...........
+        </shape>
+    </item>
+
+    <item android:id="@+id/shape_rec">
+        <shape android:shape="rectangle">
+            <solid android:color="#ffefefef" />
+        </shape>
+    </item>
+
+</layer-list>
