--- a/EscapeApp/app/src/main/res/layout/activity_game__c_.xml
+++ b/EscapeApp/app/src/main/res/layout/activity_game__c_.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/rectangle"
+    android:id="@+id/layout_rec"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -30,12 +32,12 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:background="@drawable/rectangle"
-        android:layout_height="200dp"
-        android:layout_width="200dp"
-        android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:background="@drawable/rectangle"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:id="@+id/rectangle"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
 </RelativeLayout>
