--- a/EscapeApp/app/src/main/res/layout/e__squasher.xml
+++ b/EscapeApp/app/src/main/res/layout/e__squasher.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/white"
+    android:background="@drawable/woodwall"
     tools:context="com.context.kroket.escapeapp.minigames.E_Squasher">
 
     <TextView android:id="@+id/squashtext"
