--- a/EscapeApp/app/src/main/res/layout/b_tap_game.xml
+++ b/EscapeApp/app/src/main/res/layout/b_tap_game.xml
@@ -15,7 +15,7 @@
         android:text="@string/clickButton"
         android:layout_gravity="center_horizontal"
         android:onClick="clickButton"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/timer"
         android:layout_centerHorizontal="true" />
 
     <TextView android:id="@+id/timer"
@@ -30,6 +30,21 @@
         android:layout_marginTop="120dp"
         android:textAlignment="center"/>
 
+
+    <TextView android:id="@+id/buttonSequence"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.07"
+        android:hint="@string/amount"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:layout_above="@+id/restartButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="54dp"
+        android:text="wait for buttons" />
+
     <TextView android:id="@+id/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,10 +53,11 @@
         android:hint="@string/amount"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:layout_marginTop="21dp"
+        android:textAlignment="center"
         android:layout_below="@+id/clickButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="61dp"
-        android:textAlignment="center"/>
+        android:layout_alignLeft="@+id/buttonSequence"
+        android:layout_alignStart="@+id/buttonSequence" />
 
     <TextView android:id="@+id/gameB"
         android:layout_width="wrap_content"
