--- a/EscapeApp/app/src/main/res/layout/b_tap_game.xml
+++ b/EscapeApp/app/src/main/res/layout/b_tap_game.xml
@@ -31,12 +31,16 @@
         android:textAlignment="center"/>
 
 
+    <!--android:hint="@string/buttonSequence"-->
+    <!--android:hint="@string/amount"-->
+    <!--android:layout_alignLeft="@+id/buttonSequence"-->
+    <!--android:layout_alignStart="@+id/buttonSequence"-->
+
     <TextView android:id="@+id/buttonSequence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.07"
-        android:hint="@string/amount"
         android:textStyle="bold"
         android:textSize="20dp"
         android:textAlignment="center"
@@ -56,8 +60,7 @@
         android:layout_marginTop="21dp"
         android:textAlignment="center"
         android:layout_below="@+id/clickButton"
-        android:layout_alignLeft="@+id/buttonSequence"
-        android:layout_alignStart="@+id/buttonSequence" />
+         />
 
     <TextView android:id="@+id/gameB"
         android:layout_width="wrap_content"
