--- a/EscapeApp/app/src/main/res/values/colors.xml
+++ b/EscapeApp/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="brown">#733D1A</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
